mejorando el maquetado y poniendo estilos a la cabecera

--- a/style/global.css
+++ b/style/global.css
@@ -8,5 +8,7 @@
     --background-color1:#F4E2D7 ;
     --background-color2:#FF7220;
     --background-color3: rgba(17, 17, 17, 0.1);
+    --background-color4:#FFFFFF;
+    --colorleter1:#111111;
     
 }
