--- a/style/section2.css
+++ b/style/section2.css
@@ -1,3 +1,128 @@
 .section2{
-    background-color: aqua;
+    
+    padding: 132px 120px 0px 120px;
+}
+.categories{
+font-family: 'Sangrita';
+font-style: normal;
+font-weight: 400;
+font-size: 64px;
+line-height: 120%;
+width: 301px;
+height: 77px;
+left: 120px;
+
+}
+.items{
+    display: flex;
+    justify-content: space-between;
+
+}
+.item1{
+    display: flex;
+    flex-direction: column;
+    gap:24px;
+    padding-top: 104px;
+}
+.itemG{
+padding: 12px 55px;
+justify-content: center;
+align-items: center;
+background: rgba(17, 17, 17, 0.1);
+border-radius: 12px;
+font-family: 'Inter';
+font-style: normal;
+font-size: 24px;
+color: rgba(17, 17, 17, 0.5);
+
+}
+.woman{
+    background-color: var(--background-color2);
+    color:var(--background-color4);
+}
+.item2{
+    display: grid;
+    grid-template-columns:  repeat(2,1fr);
+    gap:27px;
+}
+.linea{
+ border: 1px solid rgba(17, 17, 17, 0.6);
+transform: rotate(90deg);
+width: 300px;
+height: 2px;
+position: relative;
+right:5px ;
+top:300px;
+
+}
+.cont-img{
+    width: 382px;
+height: 392px;
+background: #F4E2D7;
+border-radius: 10px;
+
+padding-bottom: 0px;
+/*display: flex;
+justify-content: space-around;*/
+
+}
+/*.cont-img> img{
+position: relative;
+top:10px;
+left: 30px;
+}*/
+
+.icon{
+    position:relative;
+    width: 44px;
+height: 44px;
+/*float: right;*/
+bottom: 380px;
+left: 300px;
+
+
+}
+
+.h3{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 24px;
+color: #111111;
+}
+
+.h4{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+color: rgba(17, 17, 17, 0.6);
+
+}
+.numbers{
+    display: flex;
+    justify-content: space-between;
+}
+
+.number-f{
+    display: flex;
+    justify-content: start;
+    align-items: end;
+}
+.numb1{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    color: #FF7220;
+    width: 112px;
+    height: 34px;
+}
+.numb2{
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+text-decoration-line: line-through;
+color: rgba(17, 17, 17, 0.6);
 }
