--- a/style/section2.css
+++ b/style/section2.css
@@ -1,6 +1,8 @@
 .section2{
     
     padding: 132px 120px 0px 120px;
+    width: 1440px;
+height: 642px;
 }
 .categories{
 font-family: 'Sangrita';
