--- a/style/styleFirst.css
+++ b/style/styleFirst.css
@@ -3,3 +3,5 @@
 @import "./section2.css";
 @import "./section3.css";
 @import "./section4.css";
+@import "./section5.css";
+@import "./section6.css";
