--- a/style/global.css
+++ b/style/global.css
@@ -10,5 +10,6 @@
     --background-color3: rgba(17, 17, 17, 0.1);
     --background-color4:#FFFFFF;
     --colorleter1:#111111;
-    
+    --background-color5:#101010;
+    --color-letter2:rgba(255, 255, 255, 0.5);
 }
