--- a/style/section4.css
+++ b/style/section4.css
@@ -43,7 +43,7 @@ color: #111111;
     
     
 }
-.boton{
+.boton, .boton2{
     justify-content: center;
     align-items: center;
     padding: 16px 36px;
@@ -58,5 +58,8 @@ font-weight: 600;
 font-size: 16px;
 line-height: 20px;
 color: #FFFFFF;
-margin-top: 50px;
+
+}
+.boton{
+    margin-top: 50px;
 }
