--- a/style/section5.css
+++ b/style/section5.css
@@ -73,9 +73,10 @@ font-size: 48px;
 line-height: 120%;
 color: #FFFFFF;
 text-shadow: 0px 4px 100px #000000;
+padding-left: 30px;
 
 }
-.boton{
+.boton2{
     position: relative;
-    bottom: 150px;
-}
+    bottom: 184px;
+    margin-left: 30px;}
