--- a/style/section2.css
+++ b/style/section2.css
@@ -90,7 +90,7 @@ font-family: 'Inter';
 font-style: normal;
 font-weight: 500;
 font-size: 24px;
-color: #111111;
+color: var(--colorleter1);
 }
 
 .h4{
@@ -116,7 +116,7 @@ color: rgba(17, 17, 17, 0.6);
     font-style: normal;
     font-weight: 600;
     font-size: 28px;
-    color: #FF7220;
+    color: var(--background-color2);
     width: 112px;
     height: 34px;
 }
