--- a/style/global.css
+++ b/style/global.css
@@ -13,3 +13,8 @@
     --background-color5:#101010;
     --color-letter2:rgba(255, 255, 255, 0.5);
 }
+.MetaConteiner{
+    /*border:solid black;*/
+    width:100%;
+    max-width: 1440px;
+}
