--- a/style/section4.css
+++ b/style/section4.css
@@ -1,6 +1,6 @@
 .section4{
     background-color: var(--background-color1);
- width: 1440px;
+ width:100%;
 height: 783px;
 
 /*border: solid black;*/
